--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@ sitemap: false
 
 /*
  *
- *  Skinny Bones Jekyll Starter
+ *  Kun Li Jekyll Starter
  *
  *  Designer: Michael Rose
  *  Twitter: http://twitter.com/mmistakes
