--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
       <div class="wrap page-lead-content">
         <h1>Kun Li</h1>
         <h2>Highly motivated, knowledge-thirsty and naturally curious.</h2>
-        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Start Using Kun Li</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/jekyll-theme-skinny-bones" class="btn-inverse">View on GitHub</a>
+        <!--page-lead <a href="{{ site.url }}/getting-started/" class="btn-inverse">Start Using Kun Li</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/jekyll-theme-skinny-bones" class="btn-inverse">View on GitHub</a>-->
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
     {% endif %}
