--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -124,6 +124,7 @@
 		(pinterest, $pinterest-color),
 		(rss, $rss-color),
 		(tumblr, $tumblr-color),
+		(weibo, $weibo-color),
 		(twitter, $twitter-color),
 		(vimeo, $vimeo-color),
 		(youtube, $youtube-color);
