--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -57,6 +57,7 @@ $linkedin-color					      : #4875b4;
 $pinterest-color				      : #cb2027;
 $rss-color						        : #fa9b39;
 $tumblr-color					        : #2c4762;
+$weibo-color					        : #cb1515;
 $twitter-color					      : #55acee;
 $vimeo-color					        : #1ab7ea;
 $youtube-color		            : #ff3333;
