--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,5 +11,6 @@
 		{% endfor %}
 		</ul>
 	</nav><!-- /.bottom-menu -->
-	<p class="copyright">&#169; {{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a> powered by <a href="http://jekyllrb.com">Jekyll</a> + <a href="http://mmistakes.github.io/jekyll-theme-skinny-bones/">Kun Li</a>.</p>
+	<a href="#" class="btn-social weibo"><i class="fa fa-weibo" aria-hidden="true"></i> Tumblr</a>
+	<p class="copyright">&#169; {{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a> powered by Jekyll + Kun Li.</p>
 </footer>
