--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,6 @@
 		{% endfor %}
 		</ul>
 	</nav><!-- /.bottom-menu -->
-	<a href="#" class="btn-social weibo"><i class="fa fa-weibo" aria-hidden="true"></i> Tumblr</a>
+	<a href="#" color="red" class="btn-social weibo"><i class="fa fa-weibo" aria-hidden="true"></i> Weibo</a>
 	<p class="copyright">&#169; {{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a> powered by Jekyll + Kun Li.</p>
 </footer>
