--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,10 +35,13 @@
 
     {% if page.image.feature %}
     <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
+      <div class="wrap author-image" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
+
+      </div>
       <div class="wrap page-lead-content">
         <h1>Kun Li</h1>
         <h2>Highly motivated, knowledge-thirsty and naturally curious.</h2>
-        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Start Using Skinny Bones</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/jekyll-theme-skinny-bones" class="btn-inverse">View on GitHub</a>
+        <!--<a href="{{ site.url }}/getting-started/" class="btn-inverse">Start Using Skinny Bones</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/jekyll-theme-skinny-bones" class="btn-inverse">View on GitHub</a>-->
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
     {% endif %}
