--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,13 +34,11 @@
     {% include navigation-sliding.html %}
 
     {% if page.image.feature %}
-    <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
-      <div class="author-image" style="background-image:url({{ site.url }}/images/{{ page.image.aus }})">
-
-      </div>
+    <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})"> 
       <div class="wrap page-lead-content">
         <h1>Kun Li</h1>
-        <h2>Highly motivated, knowledge-thirsty and naturally curious.</h2>
+        <h2>Dr. Xiang Ao is an Associate Professor in the Key Laboratory of Intelligent Information Processing, Institute of Computing Technology, Chinese Academy of Sciences(ICT, CAS). Before joining ICT.</h2>
+        <h2>Dr. Xiang Ao is an Associate Professor in the Key Laboratory of Intelligent Information Processing, Institute of Computing Technology, Chinese Academy of Sciences(ICT, CAS). Before joining ICT.</h2>
         <!--<a href="{{ site.url }}/getting-started/" class="btn-inverse">Start Using Skinny Bones</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/jekyll-theme-skinny-bones" class="btn-inverse">View on GitHub</a>-->
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
