--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -245,11 +245,14 @@
 		padding: 3em;
 	}
 	h1 {
-		text-align:left;
+		text-align:justify;
+		text-justify:inter-ideograph;
+		font-size:medium;
 	} 
 	h2 {
-		text-align:left;
-		font-size:16;
+		text-align:justify;
+		text-justify:inter-ideograph;
+		font-size:small;
 	} 
 }
 // page header
