--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -245,9 +245,8 @@
 		padding: 3em;
 	}
 	h1 {
-		text-align:justify;
-		text-justify:inter-ideograph;
-		font-size:medium;
+		text-align:left; 
+		font-size:large;
 	} 
 	h2 {
 		text-align:justify;
