--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,5 +12,5 @@
 		</ul>
 	</nav><!-- /.bottom-menu -->
 	
-	<p class="copyright">&#169; {{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a> powered by Jekyll + Kun Li.</p>
+	<p class="copyright">&#169; {{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a>. Last modified on Nov. 2021 by Kun Li. </p>
 </footer>
