--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,8 +39,8 @@
         <h1>Kun Li</h1>
         <h2>Kun Li is a Ph.D candidate in the State Key Laboratory of Computer Architecture, Institute of Computing Technology, Chinese Academy of Sciences(ICT, CAS). </h2> 
         <h2>His research focuses on high performance computing (HPC), e.g. optimization of large-scale scientific computing applications, design for parallel numerical algorithm, and development of distributed machine learning framework. </h2> 
-        <h2>He has authored featured publications at prestigious international conferences and journals like SC19/21, IEEE TPDS, TJSC, etc. His contributions have also been adopted in domestic software ecology, such as OpenKMC for China Institute of Atomic Energy, AGCM for Institute of Atmospheric Physics in Chinese Academy of Sciences, swMD for Sunway Taihulight supercomputer, etc.</h2> 
-        <a href="pdf/Curriculum_Vitae.pdf" class="btn-inverse">Download CV</a>
+        <h2>He has authored featured publications at prestigious international conferences and journals like SC, IPDPS, IEEE TPDS, etc. His contributions have also been adopted in domestic software ecology, such as OpenKMC for China Institute of Atomic Energy, AGCM for Institute of Atmospheric Physics in Chinese Academy of Sciences, swMD for Sunway Taihulight supercomputer, etc.</h2> 
+        <a href="pdf/Curriculum_Vitae.pdf" class="btn-inverse">Download CV</a><a href="pdf/Curriculum_Vitae.pdf" class="btn-inverse">Download CV</a>
         <!--<a href="{{ site.url }}/getting-started/" class="btn-inverse">Start Using Skinny Bones</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/jekyll-theme-skinny-bones" class="btn-inverse">View on GitHub</a>-->
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
