--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,9 +37,8 @@
     <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})"> 
       <div class="wrap page-lead-content">
         <h1>Kun Li</h1>
-        <h2>Kun Li is a Ph.D candidate in the State Key Laboratory of Computer Architecture, Institute of Computing Technology, Chinese Academy of Sciences(ICT, CAS). </h2> 
-        <h2>His research focuses on high performance computing (HPC), e.g. optimization of large-scale scientific computing applications, design for parallel numerical algorithm, and development of distributed machine learning framework. </h2> 
-        <h2>He has authored featured publications at prestigious international conferences and journals like SC, IPDPS, IEEE TPDS, etc. His contributions have also been adopted in domestic software ecology, such as OpenKMC for China Institute of Atomic Energy, AGCM for Institute of Atmospheric Physics in Chinese Academy of Sciences, swMD for Sunway Taihulight supercomputer, etc.</h2> 
+        <h2>Dr. Kun Li is currently a Researcher in Systems and Networking Research Group, Microsoft Research Asia since Jul. 2022. His research interests include large-scale parallel computing, high performance deep learning systems, and heterogeneous computing. He has authored featured publications at prestigious international conferences and journals (SC, IPDPS, ICPP, IEEE TPDS, etc.) </h2> 
+        <h2>He received the Ph.D. degree with the State Key Laboratory of Computer Architecture, Institute of Computing Technology, Chinese Academy of Sciences (ICT, CAS) in 2022. The thesis was titled with Reserarch and Application on Multi-level Discontinuous and Nonlinear Scalability for Massively Parallelism, and the viva-voce vote was unanimous with excellence by all committee members.</h2> 
         <a href="pdf/Curriculum_Vitae.pdf" class="btn-inverse">Academic CV</a>  <a href="pdf/Curriculum_Vitae_CH.pdf" class="btn-inverse">中文简历</a>
         <!--<a href="{{ site.url }}/getting-started/" class="btn-inverse">Start Using Skinny Bones</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/jekyll-theme-skinny-bones" class="btn-inverse">View on GitHub</a>-->
       </div><!-- /.page-lead-content -->
