--- a/css/main.scss
+++ b/css/main.scss
@@ -44,7 +44,7 @@ sitemap: false
 @import "animations";
 @import "tiles";
 @import "footnotes";
-//@import "toc"; /* table of contents */
+@import "toc"; /* table of contents */
 @import "breadcrumbs";
 @import "syntax";
 
