--- a/_sass/_toc.scss
+++ b/_sass/_toc.scss
@@ -55,7 +55,7 @@
 /*
    1/4 wide table of contents to be used as a sidebar (left aligned)
    ========================================================================== */
-
+/*
 .toc-left {
   @include span-columns(12);
   @include media($medium) {
@@ -69,3 +69,4 @@
     }
   }
 }
+*/
