--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -79,7 +79,7 @@ $form-font-size              	: $doc-font-size;
 
 /*
    Sliding menu navigation variables
-   ========================================================================== 
+   ========================================================================== */
 
 $sliding-menu-border-color	 	 : $black;
 $sliding-menu-background 		   : $black;
@@ -87,10 +87,10 @@ $sliding-menu-color 	 		     : $white;
 $sliding-menu-background-hover : $black;
 $sliding-menu-color-hover	 	   : $white;
 $sliding-menu-border   			   : 1px solid $sliding-menu-border-color;
-$button-size		         	     : 30px;
-$transition						         : 0.3s; // increase this to see the transformations in slow-motion
+$button-size		         	     : 20px;
+$transition						         : 0.1s; // increase this to see the transformations in slow-motion
 $sliding-menu-animation        : all 500ms cubic-bezier(.86,.01,.77,.78);
-*/
+
 /*
    Badge variables
    ========================================================================== */
