--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,6 +41,8 @@
         <h1>Kun Li</h1>
         <h2>Dr. Kun Li is currently a Researcher in Systems and Networking Research Group, Microsoft Research Asia (MSRA) since Jul. 2022. His research interests include large-scale parallel computing, high performance deep learning systems, and heterogeneous computing. He has authored featured publications at prestigious international conferences and journals (SC, IPDPS, ICPP, IEEE TPDS, etc.) </h2> 
         <h2>He received the Ph.D. degree with the State Key Laboratory of Computer Architecture, Institute of Computing Technology, Chinese Academy of Sciences (ICT, CAS) in 2022. The thesis was titled with Reserarch and Application on Multi-level Discontinuous and Nonlinear Scalability for Massively Parallelism, and the viva-voce vote was unanimous with excellence by all committee members.</h2> 
+
+        <h2>I am hiring full-time interns, who have strong interests in HPC+AI. If you are interested, please email me with your CV.</h2>
         <a href="https://www.microsoft.com/en-us/research/people/kunli/" class="btn-inverse"> Microsoft Homepage </a> 
         <!--<a href="pdf/Curriculum_Vitae.pdf" class="btn-inverse">Academic CV</a>  <a href="pdf/Curriculum_Vitae_CH.pdf" class="btn-inverse">中文简历</a>-->
         <!--<a href="{{ site.url }}/getting-started/" class="btn-inverse">Start Using Skinny Bones</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/jekyll-theme-skinny-bones" class="btn-inverse">View on GitHub</a>-->
