--- a/_layouts/alumna.html
+++ b/_layouts/alumna.html
@@ -1,5 +1,5 @@
 ---
-layout: alumna
+layout: default
 ---
 
 <div id="main" role="main">			
@@ -12,15 +12,6 @@ layout: alumna
 			</div><!-- /.page-image -->
 		</div><!-- /.page-feature -->
 		{% endif %}
-		<div class="page-title">
-			<h1>{{ page.title }}</h1>
-			{% if page.excerpt %}<h2>{{ page.excerpt }}</h2>{% endif %}
-		</div>
-		<div class="archive-wrap">
-			<div class="page-content">
-				{{ content }}
-			</div><!-- /.page-content -->
-		</div class="archive-wrap"><!-- /.archive-wrap -->
 		<div class="page-title">
 			<h1>{{ page.title }}</h1>
 			{% if page.excerpt %}<h2>{{ page.excerpt }}</h2>{% endif %}
