--- a/_layouts/alumna.html
+++ b/_layouts/alumna.html
@@ -16,6 +16,10 @@ layout: default
 			<h1>{{ page.title }}</h1>
 			{% if page.excerpt %}<h2>{{ page.excerpt }}</h2>{% endif %}
 		</div>
+		<div class="page-title">
+			<h1>{{ page.title }}</h1>
+			{% if page.excerpt %}<h2>{{ page.excerpt }}</h2>{% endif %}
+		</div>
 		<div class="archive-wrap">
 			<div class="page-content">
 				{{ content }}
