--- a/_layouts/alumna.html
+++ b/_layouts/alumna.html
@@ -16,15 +16,11 @@ layout: default
 			<h1>{{ page.title }}</h1>
 			{% if page.excerpt %}<h2>{{ page.excerpt }}</h2>{% endif %}
 		</div> 
-		<div class="archive-wrap">
-			<div class="page-content">
-				{{ 
-					<div class="tiles">
-					{% for post in site.categories.collaborators %}
-					  {% include post-grid.html %}
-					{% endfor %}
-					</div><!-- /.tiles --> }}
-			</div><!-- /.page-content -->
-		</div class="archive-wrap"><!-- /.archive-wrap --> 
+		
+		<div class="tiles">
+			{% for post in site.categories.collaborators %}
+			{% include post-grid.html %}
+			{% endfor %}
+		</div><!-- /.tiles -->
 	</div><!-- /.wrap -->
 </div><!-- /#main -->
