--- a/_layouts/alumni.html
+++ b/_layouts/alumni.html
@@ -22,6 +22,16 @@ layout: default
 			{% include post-grid.html %}
 			{% endfor %}
 		</div><!-- /.tiles -->
+	</div><!-- /.wrap -->
+	<div class="wrap">
+		{% if page.image.feature %}
+		<div class="page-feature">
+			<div class="page-image">
+				<img src="{{ site.url }}/images/{{ page.image.feature }}" class="page-feature-image" alt="{{ page.title }}">
+				{% if page.image.credit %}{% include image-credit.html %}{% endif %}
+			</div><!-- /.page-image -->
+		</div><!-- /.page-feature -->
+		{% endif %}
 		<div class="page-title">
 			<h1>{{ page.alumni }}</h1>
 			{% if page.slogan %}<h2>{{ page.slogan }}</h2>{% endif %}
