--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,9 +40,9 @@
       <div class="wrap page-lead-content">
         <h1>Kun Li</h1>
         <h2>Dr. Kun Li is currently a Researcher in Systems and Networking Research Group, Microsoft Research Asia (MSRA) since Jul. 2022. His research interests include large-scale parallel computing, high performance deep learning systems, and heterogeneous computing. He has authored featured publications at prestigious international conferences and journals (SC, IPDPS, ICPP, IEEE TPDS, etc.) </h2> 
-        <h2>He received the Ph.D. degree with the State Key Laboratory of Computer Architecture, Institute of Computing Technology, Chinese Academy of Sciences (ICT, CAS) in 2022. The thesis was titled with Reserarch and Application on Multi-level Discontinuous and Nonlinear Scalability for Massively Parallelism, and the viva-voce vote was unanimous with excellence by all committee members.</h2> 
+        <h2>He received the Ph.D. degree with the State Key Laboratory of Computer Architecture, Institute of Computing Technology, Chinese Academy of Sciences (ICT, CAS) in 2022. He has won the 2022 CCF优博, ACM SIGHPC China优博, 中国科学院院长奖, etc.</h2> 
 
-        <h2>I am hiring full-time interns, who have strong interests in system (HPC+AI).<br> <del>My intern HCs are all occupied until 2/28/2023.</del> If you are interested, please email me with your CV and refer to RECRUITMENT page.</h2>
+        <h2>Now he is hiring full-time interns, who have strong interests in system (HPC+AI).<br> <del>The intern HCs are all occupied until 2/28/2023.</del> If you are interested, please email him with your CV and refer to RECRUITMENT page.</h2>
         <a href="https://www.microsoft.com/en-us/research/people/kunli/" class="btn-inverse"> Microsoft Homepage </a> 
         <!--<a href="pdf/Curriculum_Vitae.pdf" class="btn-inverse">Academic CV</a>  <a href="pdf/Curriculum_Vitae_CH.pdf" class="btn-inverse">中文简历</a>-->
         <!--<a href="{{ site.url }}/getting-started/" class="btn-inverse">Start Using Skinny Bones</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/jekyll-theme-skinny-bones" class="btn-inverse">View on GitHub</a>-->
