--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,7 +39,7 @@
     <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})"> 
       <div class="wrap page-lead-content">
         <h1>Kun Li</h1>
-        <h2>Dr. Kun Li is currently a Researcher in Systems and Networking Research Group, Microsoft Research Asia (MSRA) since Jul. 2022. His research interests include large-scale parallel computing, high performance deep learning systems, and heterogeneous computing. He has authored featured publications at prestigious international conferences and journals (SC, PPOPP, IPDPS, IEEE TPDS, etc.) </h2> 
+        <h2>Dr. Kun Li is currently a Researcher in Systems and Networking Research Group, Microsoft Research Asia (MSRA) since Jul. 2022. His research interests include large-scale AI4Science system, high-performance parallel algorithm, and LLM distribuited training. He has authored featured publications at prestigious international conferences and journals (SC, PPOPP, IPDPS, IEEE TPDS, etc.) </h2> 
         <h2>He received the Ph.D. degree with the State Key Laboratory of Computer Architecture, Institute of Computing Technology, Chinese Academy of Sciences (ICT, CAS) in 2022. He has won CCF优博, ACM SIGHPC China优博, 中国科学院院长奖, etc.</h2> 
 
         <h2>Now he is hiring full-time interns, who have strong interests in system (HPC+AI).<br> 
