--- a/_layouts/alumni.html
+++ b/_layouts/alumni.html
@@ -2,7 +2,27 @@
 layout: default
 ---
 
-<div id="main" role="main">			
+<div id="main" role="main">
+	<div class="wrap">
+		{% if page.image.feature %}
+		<div class="page-feature">
+			<div class="page-image">
+				<img src="{{ site.url }}/images/{{ page.image.feature }}" class="page-feature-image" alt="{{ page.title }}">
+				{% if page.image.credit %}{% include image-credit.html %}{% endif %}
+			</div><!-- /.page-image -->
+		</div><!-- /.page-feature -->
+		{% endif %}
+		<div class="page-title">
+			<h1>{{ page.title }}</h1>
+			{% if page.name %}<h2>{{ page.name }}</h2>{% endif %}
+		</div> 
+		
+		<div class="tiles">
+			{% for post in site.categories.fte %}
+			{% include post-grid.html %}
+			{% endfor %}
+		</div><!-- /.tiles -->
+	</div><!-- /.wrap -->			
 	<div class="wrap">
 		{% if page.image.feature %}
 		<div class="page-feature">
