--- a/_layouts/alumni.html
+++ b/_layouts/alumni.html
@@ -13,8 +13,7 @@ layout: default
 		</div><!-- /.page-feature -->
 		{% endif %}
 		<div class="page-title">
-			<h1>{{ page.title }}</h1>
-			{% if page.name %}<h2>{{ page.name }}</h2>{% endif %}
+			<h1>{{ Prjoect Lead }}</h1>
 		</div> 
 		
 		<div class="tiles">
