--- a/_layouts/alumni.html
+++ b/_layouts/alumni.html
@@ -13,7 +13,7 @@ layout: default
 		</div><!-- /.page-feature -->
 		{% endif %}
 		<div class="page-title">
-			<h1>{{ Prjoect Lead }}</h1>
+			<h1>{{ page.ftetitle }}</h1>
 		</div> 
 		
 		<div class="tiles">
